--- a/ClassLibrary/MiddleLayer.csproj
+++ b/ClassLibrary/MiddleLayer.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Appointment.cs" />
+    <Compile Include="AppointmentCollection.cs" />
     <Compile Include="BugReport.cs" />
     <Compile Include="clsDataConnection.cs" />
     <Compile Include="Emergency.cs" />
