--- a/AdminSystem/Web.config
+++ b/AdminSystem/Web.config
@@ -1,11 +1,18 @@
 ﻿<?xml version="1.0"?>
 <configuration>
   <connectionStrings>
-    <add name="Medi2GoConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Medi2Go;Integrated Security=True;Connect Timeout=30;Encrypt=False;" providerName="System.Data.SqlClient" />
+    <add name="Medi2GoConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Medi2Go;Integrated Security=True;Connect Timeout=30;Encrypt=False;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
-  
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.8" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.6.1"/>
+    <compilation debug="true" targetFramework="4.8"/>
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
 </configuration>
