--- a/ClassLibrary/MiddleLayer.csproj
+++ b/ClassLibrary/MiddleLayer.csproj
@@ -45,6 +45,8 @@
     <Compile Include="AppointmentCollection.cs" />
     <Compile Include="BugReport.cs" />
     <Compile Include="clsDataConnection.cs" />
+    <Compile Include="clsDoctor.cs" />
+    <Compile Include="DoctorCollection.cs" />
     <Compile Include="Emergency.cs" />
     <Compile Include="HealthCheckup.cs" />
     <Compile Include="Medicine.cs" />
@@ -52,6 +54,8 @@
     <Compile Include="Order.cs" />
     <Compile Include="OrderCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="staff.cs" />
+    <Compile Include="staffcollection.cs" />
     <Compile Include="TherapyPackCollection.cs" />
     <Compile Include="Therapy.cs" />
     <Compile Include="TherapyCollection.cs" />
