--- a/Testing1/TestHarshPatientPanel.csproj
+++ b/Testing1/TestHarshPatientPanel.csproj
@@ -49,8 +49,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PatientPropertyTests.cs" />
+    <Compile Include="TestPatientPanel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestPatientPanelCollection.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
